--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -10,6 +10,12 @@
 }
 
 .intro__text:nth-of-type(2n) {
+   text-align: right;
+   margin-top: 10px;
+}
+
+.intro__text:nth-of-type(3n) {
     font-size: 16px;
     line-height: 163%;
+    margin-top: 32px;
 }
