--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,4 +1,9 @@
 .lead__image {
+    max-width: 100%;
+    min-height: 615px;
     margin: 64px 0 0;
     padding: 0;
+    background-image: url(../../../images/lead__image.png);
+    background-size: cover;
+    filter: grayscale(100%);
 }
