--- a/blocks/group-9/__subtitle/group-9__subtitle.css
+++ b/blocks/group-9/__subtitle/group-9__subtitle.css
@@ -10,3 +10,11 @@
     margin: 32px 0 0;
     padding: 0;
 }
+
+@media screen and (max-width: 320px) {
+    .group-9__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        margin: 16px 0 0;
+    }
+}
