--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,3 +9,20 @@
     color: #FFFFFF;
     max-width: 270px;
 }
+
+@media screen and (max-width: 768px) {
+    .place__title {
+        font-size: 42px;
+        line-height: 46px;
+        max-width: 100%;
+     }
+ }
+ 
+ @media screen and (max-width: 320px) {
+     .place__title {
+        font-size: 32px;
+        line-height: 35px;
+        max-width: 100%;
+        padding: 0 16px 0;
+        }
+ }
