--- a/blocks/buy-btn/__paragraph/buy-btn__paragraph.css
+++ b/blocks/buy-btn/__paragraph/buy-btn__paragraph.css
@@ -11,3 +11,10 @@
     order: 0;
     flex-grow: 0;
 }
+
+@media screen and (max-width: 550px) {
+    .buy-btn__paragraph {
+        font-size: 15px;
+        line-height: 18px;
+    }
+}
