--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,3 +9,10 @@
     text-align: center;
     color: #FFFFFF;
 }
+
+@media screen and (max-width: 320px) {
+    .footer {
+        line-height: 14px;
+        margin: 64px 0 24px;
+    }
+}
