--- a/blocks/group-9/__title/group-9__title.css
+++ b/blocks/group-9/__title/group-9__title.css
@@ -9,3 +9,10 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 320px) {
+    .group-9__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
