--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,19 @@
     padding: 0;
     max-width: 270px;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        margin: 34px auto 0;
+        padding: 0;
+        max-width: 270px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        margin: 20px auto 0;
+        padding: 0;
+        max-width: 200px;
+    }
+}
