--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,3 +3,19 @@
     padding: 0;
     max-width: 785px;
 }
+
+@media screen and (max-width: 768px) {
+    .intro {
+        max-width: 720px;
+        margin: 88px 0 0;
+        padding: 0 24px 0;
+    }    
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        max-width: 288px;
+        margin: 64px 0 0;
+        padding: 0 16px 0;
+    }
+}
