--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,9 +1,22 @@
 .lead__image {
-    max-width: 100%;
-    min-height: 615px;
+    width: 100%;
+    /*min-height: 615px;*/
     margin: 64px 0 0;
     padding: 0;
-    background-image: url(../../../images/lead__image.png);
-    background-size: cover;
     filter: grayscale(100%);
+    object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__image {
+        width: 100%;
+        margin: 36px 0 0;
+       
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__image {
+        min-height: 200px;
+    }
 }
