--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,4 @@
 .lead__title {
-    max-width: 793px;
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
@@ -9,4 +8,25 @@
     color: #FFFFFF;
     margin: 0 auto;
     padding: 0;
+}
+
+@media screen and (max-width: 768px){
+    .lead__title {
+        max-width: 100%;
+        margin:0 auto;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .lead__title {
+        font-size: 64px;
+        line-height: 70px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
