--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,21 @@
 .lead {
     max-width: 984px;
-    margin: 58px calc((100% - 984px) / 2) 0;
+    margin: 92px calc((100% - 984px) / 2) 0;
     padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        max-width: 100%;
+        margin: 92px 0 0;
+
+    }   
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        max-width: 288px;
+        margin: 51px 0 0;
+        padding: 0 16px 0;
+    }
 }
