--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,3 +4,19 @@
     margin: 0 auto;
     padding: 0;
 }
+
+@media screen and (max-width: 768px){
+    .page {
+        max-width: 100vw;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .page {
+        max-width: 100vw;
+        margin: 0;
+        padding: 0;
+    }
+}
