--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,3 +7,22 @@
     grid-template-rows: repeat(2 , 1fr);
     grid-gap: 16px;
 }
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        max-width: 100%;
+        margin: 90px 0 0;
+        padding: 0 24px 0;
+        grid-template-columns: repeat(2 , 1fr);
+        
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        margin: 90px 0 0;
+        padding: 0 16px 0;
+        grid-template-columns: repeat(1 , 1fr);
+        grid-template-rows: repeat(8 , 1fr);
+    }
+}
