--- a/blocks/place/__p-list/place__p-list.css
+++ b/blocks/place/__p-list/place__p-list.css
@@ -4,3 +4,10 @@
     grid-column: 2;
     grid-row: span 2;
 }
+
+@media screen and (max-width: 320px){
+    .place__p-list {
+        grid-column: 1;
+        padding: 0 16px 0;
+    }
+}
