--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 29px;
     color: #FFFFFF;
     margin: 25px 0 0;
     padding: 0;
@@ -12,3 +12,17 @@
 .place__paragraph:first-of-type {
     margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26px;
+    }
+ }
+ 
+ @media screen and (max-width: 320px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26px;
+    }
+ }
