--- a/blocks/place/__website/__artist/place__artist.css
+++ b/blocks/place/__website/__artist/place__artist.css
@@ -6,6 +6,21 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
+    letter-spacing: 0.12em;
     color: #FFFFFF;
     text-decoration: none;
 }
+
+@media screen and (max-width: 768px) {
+    .place__artist {
+        font-size: 12px;
+        line-height: 15px;
+    }
+ }
+ 
+ @media screen and (max-width: 320px) {
+    .place__artist {
+        font-size: 12px;
+        line-height: 15px;
+    }
+ }
