--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -7,3 +7,10 @@
     justify-content: flex-end;
     flex-direction: column;
 }
+
+@media screen and (max-width:320px) {
+    .place__website {
+        grid-column: 1;
+        padding: 0 16px 0;
+    }
+}
