--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,3 +11,30 @@
 .place:nth-of-type(n1) {
     margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .place {
+        max-width: 100%;
+        margin: 88px 0 0;
+        grid-gap: 46px 28px;
+        margin: 72px 0 0;
+        }
+
+    .place:nth-of-type(n1) {
+        margin: 0;
+    }
+ }
+ 
+ @media screen and (max-width: 320px) {
+    .place {
+        max-width: 100%;
+        margin: 62px 0 0;
+        grid-template-columns: 1fr;
+        grid-gap: 30px 0;
+        margin: 50px 0 0;
+        }
+
+    .place:nth-of-type(n1) {
+        margin: 0;
+        }
+ }
