--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,3 +3,19 @@
     padding: 0;
     max-width: 984px;
 }
+
+@media screen and (max-width: 768px) {
+   .places {
+    max-width: 100%;
+    margin: 88px auto 0;
+    padding: 0 24px 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places {
+        max-width: 100%;
+        margin: 62px auto 0;
+        padding: 0;
+        }
+}
