--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,13 @@
 .intro {
-    margin: 92px calc(100% - 933px) 0 148px;
+    max-width: 784px;
+    margin: 92px auto 0;
     padding: 0;
-    max-width: 785px;
+}
+
+@media screen and (max-width: 1060px) {
+    .intro {
+        margin: 92px 0 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
