--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,5 @@
 .lead__image {
     width: 100%;
-    /*min-height: 615px;*/
     margin: 64px 0 0;
     padding: 0;
     filter: grayscale(100%);
@@ -11,12 +10,12 @@
     .lead__image {
         width: 100%;
         margin: 36px 0 0;
-       
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__image {
         min-height: 200px;
+        margin: 40px 0 0;
     }
 }
