--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,12 +8,13 @@
     color: #FFFFFF;
     margin: 0 auto;
     padding: 0;
+    max-width: 794px;
 }
 
 @media screen and (max-width: 768px){
     .lead__title {
         max-width: 100%;
-        margin:0 auto;
+        margin:0 24px 0;
     }
 }
 
@@ -28,5 +29,6 @@
     .lead__title {
         font-size: 40px;
         line-height: 44px;
+        margin: 0 16px 0;
     }
 }
