--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,21 +1,25 @@
 .lead {
-    max-width: 984px;
-    margin: 92px calc((100% - 984px) / 2) 0;
+    max-width: 100%;
+    margin: 92px calc((100% - 984px) / 2);
     padding: 0;
+}
+
+@media screen and (max-width: 984px) {
+    .lead {
+        margin: 92px 0 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .lead {
         max-width: 100%;
         margin: 92px 0 0;
-
     }   
 }
 
 @media screen and (max-width: 320px) {
     .lead {
-        max-width: 288px;
+        max-width: 100%;
         margin: 51px 0 0;
-        padding: 0 16px 0;
     }
 }
