--- a/blocks/place/__website/__artist/place__artist.css
+++ b/blocks/place/__website/__artist/place__artist.css
@@ -11,14 +11,11 @@
     text-decoration: none;
 }
 
+.place__artist:hover {
+    color: #AAAAAA;
+}
+
 @media screen and (max-width: 768px) {
-    .place__artist {
-        font-size: 12px;
-        line-height: 15px;
-    }
- }
- 
- @media screen and (max-width: 320px) {
     .place__artist {
         font-size: 12px;
         line-height: 15px;
