--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 @import url(./vendor/normalize.css);
-@import url('https://rsms.me/inter/inter.css'); 
+@import url(./fonts/inter.css); 
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
@@ -27,6 +27,7 @@
 @import url(./blocks/cover/__overlay/cover__overlay.css);
 @import url(./blocks/group-9/group-9.css);
 @import url(./blocks/group-9/__title/group-9__title.css);
+@import url(./blocks/group-9/__p-list/group-9__p-list.css);
 @import url(./blocks/group-9/__subtitle/group-9__subtitle.css);
 @import url(./blocks/footer/footer.css);
 
