--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,6 +13,6 @@
 @media screen and (max-width: 320px) {
     .footer {
         line-height: 14px;
-        margin: 64px 0 24px;
+        margin-top: 64px;
     }
 }
