--- a/blocks/group-9/__subtitle/group-9__subtitle.css
+++ b/blocks/group-9/__subtitle/group-9__subtitle.css
@@ -7,14 +7,18 @@
     line-height: 22px;
     text-align: center;
     color: #FFFFFF;
-    margin: 32px 0 0;
+    margin: 0;
     padding: 0;
+}
+
+.group-9__subtitle:nth-of-type(n1) {
+    margin: 32px 0 0;
 }
 
 @media screen and (max-width: 320px) {
     .group-9__subtitle {
         font-size: 14px;
         line-height: 16px;
-        margin: 16px 0 0;
+        margin-top: 16px;
     }
 }
