--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,18 +4,9 @@
     max-width: 270px;
 }
 
-@media screen and (max-width: 768px) {
-    .header {
-        margin: 34px auto 0;
-        padding: 0;
-        max-width: 270px;
-    }
-}
-
 @media screen and (max-width: 320px) {
     .header {
-        margin: 20px auto 0;
-        padding: 0;
+        margin-top: 20px;
         max-width: 200px;
     }
 }
