--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -13,7 +13,7 @@
 @media screen and (max-width: 768px) {
     .intro {
         max-width: 720px;
-        margin: 88px 0 0;
+        margin-top: 88px;
         padding: 0 24px 0;
     }    
 }
@@ -21,7 +21,7 @@
 @media screen and (max-width: 320px) {
     .intro {
         max-width: 288px;
-        margin: 64px 0 0;
+        margin-top: 64px;
         padding: 0 16px 0;
     }
 }
