--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 768px) {
     .lead__image {
-        width: 100%;
+        max-width: 100%;
         margin: 36px 0 0;
     }
 }
