--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,15 +6,6 @@
 
 @media screen and (max-width: 768px) {
     .place__image {
-        /*max-width: 340px;
-        max-height: 340px;*/
-        width: 100%;
+        max-width: 100%;
      }
- }
- 
- @media screen and (max-width: 320px) {
-     .place__image {
-        max-width: 320px;
-        max-height: 320px;
-         }
  }
