--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,8 +14,7 @@
 
 @media screen and (max-width: 320px) {
     .places {
-        max-width: 100%;
-        margin: 62px auto 0;
+        margin-top: 62px;
         padding: 0;
-        }
+    }
 }
