--- a/blocks/buy-btn/buy-btn.css
+++ b/blocks/buy-btn/buy-btn.css
@@ -10,6 +10,7 @@
     align-items: center;
     grid-column: 1;
     cursor: pointer;
+    text-decoration: none;
 }
 .buy-btn:hover {
     background: #004391;
