--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 .cover__overlay {
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #2A2C2F;
     opacity: 0.3;
     position: absolute;
     z-index: 0;
