--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
 .cover__title {
-    font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
@@ -15,5 +14,6 @@
     .cover__title {
         font-size: 32px;
         line-height: 35px;
+        margin: 46px 0 0;
     }
 }
