--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
     max-width: calc(100% - 96px);
-    height: 740px;
+    min-height: 740px;
     margin: 92px auto 0;
     padding: 0;
     display: flex;
@@ -8,17 +8,24 @@
     align-items: center;
     flex-direction: column;
     background-image: url(../../images/cover_image.png);
-    background-size: cover;
+    background-position: center;
     position: relative;
+    font-family: "inter", Arial, sans-serif;
 }
 
-.cover .buy-btn {
-    margin: 32px 0 0;
-    z-index: 1;
+.cover::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #2A2C2F;
+    opacity: .3;
 }
 
-.cover:hover .cover__overlay{
-    opacity: 0.8;
+.cover:hover::after {
+    opacity: .8;
 }
 
 @media screen and (max-width: 768px) {
@@ -31,6 +38,7 @@
 
 @media screen and (max-width: 320px) {
     .cover {
-        max-height: 254px;
+        min-height: 254px;
+        margin-top: 64px;
     }
 }
