--- a/blocks/intro/__quote/intro__quote.css
+++ b/blocks/intro/__quote/intro__quote.css
@@ -2,10 +2,15 @@
     max-width: 720px;
     margin: 40px 0 0;
     padding: 0;
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 34px;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__quote {
+        line-height: 30px;
+    }    
 }
