--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,7 +2,6 @@
     max-width: 720px;
     margin: 32px 0 0;
     padding: 0;
-    font-family: Inter;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -12,7 +11,7 @@
 
 @media screen and (max-width: 320px) {
     .intro__text {
-        font-size: 24px;
-        line-height: 30px;
+        font-size: 16px;
+        line-height: 163%;
     }
 }
