--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,6 +2,7 @@
     max-width: 100%;
     margin: 92px calc((100% - 984px) / 2);
     padding: 0;
+    font-family: "inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 984px) {
