--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 0;
-    font-family:"inter", Ariel, sans-serif;
+    font-family:"inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 768px){
