--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,8 +3,7 @@
     margin: 118px auto 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(4 , 1fr);
-    grid-template-rows: repeat(2 , 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 16px;
 }
 
@@ -14,14 +13,17 @@
         margin: 90px 0 0;
         padding: 0 24px 0;
         grid-template-columns: repeat(2 , 1fr);
-        
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .photo-grid {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
 
 @media screen and (max-width: 320px) {
     .photo-grid {
         padding: 0 16px 0;
-        grid-template-columns: repeat(1 , 1fr);
-        grid-template-rows: repeat(8 , 1fr);
     }
 }
