--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -9,3 +9,10 @@
         max-width: 100%;
      }
  }
+
+ @media screen and (max-width: 580px) {
+     .place__image {
+        grid-column: 1;
+     }
+ }
+ 
