--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,13 +1,11 @@
 .place__title {
     margin: 0;
     padding: 0;
-    font-family: Inter;
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
-    max-width: 270px;
 }
 
 @media screen and (max-width: 768px) {
@@ -18,6 +16,12 @@
      }
  }
  
+ @media screen and (max-width: 580px) {
+     .place__title {
+         grid-column: 1;
+     }
+ }
+
  @media screen and (max-width: 320px) {
      .place__title {
         font-size: 32px;
