--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,11 +5,7 @@
     grid-template-columns: repeat(2 , 1fr);
     grid-template-rows: min-content min-content 1fr;
     grid-gap: 48px 40px;
-    
-}
-
-.place:nth-of-type(n1) {
-    margin: 0;
+    font-family: "inter", Arial, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
@@ -18,20 +14,12 @@
         grid-gap: 46px 28px;
         margin: 72px 0 0;
         }
-
-    .place:nth-of-type(n1) {
-        margin: 0;
-    }
  }
- 
- @media screen and (max-width: 320px) {
-    .place {
+
+ @media screen and (max-width: 580px) {
+     .place {
         grid-template-columns: 1fr;
         grid-gap: 30px 0;
         margin: 50px 0 0;
-        }
-
-    .place:nth-of-type(n1) {
-        margin: 0;
-        }
+     }
  }
