--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(./fonts/inter.css); 
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/content/content.css);
 @import url(./blocks/header/__logo/header__logo.css);
 @import url(./blocks/lead/lead.css);
 @import url(./blocks/lead/__title/lead__title.css);
@@ -17,20 +18,21 @@
 @import url(./blocks/places/places.css);
 @import url(./blocks/place/place.css);
 @import url(./blocks/buy-btn/buy-btn.css);
-@import url(./blocks/buy-btn/__paragraph/buy-btn__paragraph.css);
+@import url(./blocks/buy-btn/_loc/buy-btn_loc_place.css);
 @import url(./blocks/place/__title/place__title.css);
 @import url(./blocks/place/__image/place__image.css);
 @import url(./blocks/place/__website/place__website.css);
 @import url(./blocks/place/__artist/place__artist.css);
 @import url(./blocks/place/__url-heading/place__url-heading.css);
-@import url(./blocks/place/__p-list/place__p-list.css);
+@import url(./blocks/place/__description/place__description.css);
 @import url(./blocks/place/__paragraph/place__paragraph.css);
 @import url(./blocks/cover/cover.css);
-@import url(./blocks/cover/__overlay/cover__overlay.css);
 @import url(./blocks/cover/__title/cover__title.css);
-@import url(./blocks/cover/__p-list/cover__p-list.css);
+@import url(./blocks/cover/__adress/cover__adress.css);
 @import url(./blocks/cover/__subtitle/cover__subtitle.css);
+@import url(./blocks/cover/__btn/cover__btn.css);
 @import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__copyright/footer__copyright.css);
 
 
 
