--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -14,6 +14,6 @@
     .cover__title {
         font-size: 32px;
         line-height: 35px;
-        margin: 46px 0 0;
+        margin: 0;
     }
 }
