--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,7 +1,8 @@
 .place__image {
-    max-width: 460px;
-    max-height: 460px;
+    width: 100%;
     grid-column: 1;
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (max-width: 768px) {
