--- a/blocks/place/__btn/place__btn.css
+++ b/blocks/place/__btn/place__btn.css
@@ -1,9 +1,9 @@
-.buy-btn_loc_place {
+.place__btn {
     grid-column: 1;
 }
 
 @media screen and (max-width:320px) {
-    .buy-btn_loc_place {
+    .place__btn {
         max-width: 100%;
         padding: 13px 40px;
         margin: 0 auto;
